--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,6 +1,12 @@
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  background-color: rgb(215, 178, 165);
+}
+
+header {
+  background-color: darksalmon;
 }
 
 textarea {
